samples/_failures_safe/1761148040_39a357_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d2350f6e.c: In function ‘main’:
./samples/SAFE/__tmp_d2350f6e.c:192:5: error: expected expression at end of input
  192 |     if (fgets(input, sizeof(input), stdin) ==
      |     ^~
./samples/SAFE/__tmp_d2350f6e.c:192:5: error: expected declaration or statement at end of input
